<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"

    android:orientation="horizontal">
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:orientation="vertical">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/_12_apr"
            android:id="@+id/textDate"
            android:fontFamily="@font/poppins_light"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/_08_17"
            android:id="@+id/textTime"
            android:fontFamily="@font/poppins_light"/>
    </LinearLayout>
    <com.google.android.material.divider.MaterialDivider
        android:layout_width="1dp"
        android:layout_height="match_parent"/>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:orientation="vertical">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:text="@string/status"
            android:id="@+id/textStatus"
            android:fontFamily="@font/poppins"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/details"
            android:id="@+id/textMessage"
            android:fontFamily="@font/poppins_light"/>
    </LinearLayout>

</LinearLayout>