<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:gravity="center_horizontal"
    android:padding="10dp"
    tools:context=".view.auth.OtpViewFragment">

    <com.chaos.view.PinView
        android:id="@+id/inputPinView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:padding="10dp"
        app:itemCount="6"
        style="@style/PinWidget.PinView" />



    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/we_ve_sent_a_verification_code_to"/>

    <TextView
        android:id="@+id/textPhoneNumber"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/poppins"
        android:padding="5dp"
        android:gravity="center"
        android:text="@string/phone_number" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/buttonConfirm"
        android:layout_width="match_parent"
        android:layout_height="65dp"
        android:layout_margin="10dp"
        android:fontFamily="@font/poppins_medium"
        android:text="Confirm"

        android:textAllCaps="false"
        app:cornerRadius="10dp" />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/didn_t_recieve_the_otp"/>
        <Button
            android:id="@+id/buttonResendOTP"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/resend"
            android:textAllCaps="false"
            style="@style/Widget.MaterialComponents.Button.TextButton"/>

    </LinearLayout>


</LinearLayout>