<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".view.cart.CartFragment">
    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        >
        <androidx.recyclerview.widget.RecyclerView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/recycleviewCart"/>
            <TextView
                android:id="@+id/textCartIsEmpty"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/poppins_bold"
                android:gravity="center"
                android:textSize="16sp"
                android:layout_gravity="center"
                android:text="@string/your_cart_is_empty"/>
    </FrameLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:visibility="gone"
        android:id="@+id/layoutNoUser"
        android:gravity="center"
        android:orientation="vertical"
        android:layout_gravity="center"
        >
        <ImageView
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:src="@drawable/nouser"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"

            android:textSize="18sp"
            android:fontFamily="@font/poppins_light"
            android:text="@string/no_user_found"/>
        <com.google.android.material.button.MaterialButton
            android:layout_width="200dp"
            android:id="@+id/buttonLogin"
            android:layout_margin="10dp"
            android:layout_height="60dp"
            app:cornerRadius="20dp"
            android:text="@string/login"
            />
    </LinearLayout>
</FrameLayout>