<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:padding="10dp"
    android:background="@drawable/bottom_sheet_bg"

    android:layout_height="wrap_content"
   >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            >
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/rate_your_order"
                android:fontFamily="@font/poppins_light"
                android:textSize="30sp"
                android:textAlignment="center"
                android:layout_marginVertical="10dp"
                android:textColor="@color/black"/>

            <androidx.appcompat.widget.AppCompatRatingBar
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:numStars="5"
                android:id="@+id/ratingBar"
                android:rating="0"
                android:layout_gravity="center"
                android:layout_margin="10dp"
                android:stepSize="1" />

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_marginVertical="10dp"
                android:layout_height="wrap_content">
                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="100dp"
                    android:hint="@string/comment"
                    android:id="@+id/inputComment"
                    android:textAlignment="textStart"/>
            </com.google.android.material.textfield.TextInputLayout>
            <com.google.android.material.button.MaterialButton
                android:layout_width="match_parent"
                android:id="@+id/buttonSubmitRating"
                android:layout_height="60dp"
                android:layout_marginVertical="10dp"
                app:cornerRadius="10dp"
                android:text="@string/submit"/>
        </LinearLayout>

</FrameLayout>