<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:background="@color/white"
    android:layout_height="wrap_content"
    android:padding="10dp"
    android:orientation="vertical">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/juan_dela_cruz"
            android:textSize="18sp"
            android:id="@+id/textFullname"
            android:layout_weight="1"
            android:fontFamily="@font/poppins"
            android:textColor="@color/black"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/_0943433232"
            android:id="@+id/textPhoneNumber"
            android:textSize="16sp"
            android:fontFamily="@font/poppins_light"
            />

    </LinearLayout>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/street_name_building_house_no"
        android:textSize="14sp"
        android:id="@+id/textStreet"
        android:fontFamily="@font/poppins_light"
        />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:layout_width="match_parent"
            android:layout_weight="1"
            android:id="@+id/textAddressLine"
            android:layout_height="wrap_content"
            android:text="@string/street_name_building_house_no"
            android:textSize="14sp"
            android:fontFamily="@font/poppins_light"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="2421"
            android:textSize="14sp"
            android:id="@+id/textPostalCode"
            android:fontFamily="@font/poppins_light"
            />
    </LinearLayout>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Default"
        android:id="@+id/textDefault"
        android:padding="5dp"
        android:fontFamily="@font/poppins"
        android:textColor="@color/purple_500"

        />

</LinearLayout>